--- a/src/components/AppWindStats/AppWindStats.scss
+++ b/src/components/AppWindStats/AppWindStats.scss
@@ -50,7 +50,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       transform-origin: center center;
-      transform: translate(50%, -50%) rotate(34 + deg); /* Поворачиваем стрелку */
+      transform: translate(50%, -50%) rotate(0deg); /* Поворачиваем стрелку */
     }
 }
 
