--- a/src/components/CurrentWeather/CurrentWeather.scss
+++ b/src/components/CurrentWeather/CurrentWeather.scss
@@ -48,7 +48,8 @@
                 font-weight: 600;
                 position: relative;
 
-                span{
+                &::after{
+                    content: '°';
                     position: absolute;
                     font-size: 56px;
                     font-weight: 400;
