--- a/src/components/pages/MainPage.scss
+++ b/src/components/pages/MainPage.scss
@@ -3,6 +3,9 @@ display: flex;
     .mainPage{
         flex: 80%;
         padding: 50px;
+        display: sticky;
+        overflow-y: auto;
+        height: 100vh;
     }
     .sidebar{
         flex: 20%;
